Add compaction action in database menu
* Load the compaction addon by default
* Register extensions for compaction link + modal

--- a/settings.json.default.json
+++ b/settings.json.default.json
@@ -13,7 +13,8 @@
   { "name": "permissions" },
   { "name": "auth" },
   { "name": "verifyinstall" },
-  { "name": "documentation" }
+  { "name": "documentation" },
+  { "name": "compaction" }
   ],
     "template": {
       "development": {
